update config file

--- a/config/llfuzz.conf
+++ b/config/llfuzz.conf
@@ -16,7 +16,7 @@ rx_gain                = 40
 # --------------------------------------------
 # Configurations for LLFuzz-------------------
 #---------------------------------------------
-targetLayer             = PHY       # MAC, RLC, PDCP, PHY
+targetLayer             = MAC       # MAC, RLC, PDCP, PHY
 fuzzingState            = state4    # state1/state2/state3/state4
 enableADB               = true
 startIdx                = 0      
